Added SMTP settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,10 @@ spring.datasource.password=a1234567
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
+
+# Mail configuration
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=
+spring.mail.password=
+spring.mail.protocol=smtp
